[package]
name = "pecho"
version = "2.0.1"
authors = ["Yuto Nishida <starptr@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Painted echo: Echo with easy colors"
repository = "https://github.com/starptr/pecho"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
clap = "2.33.3"
lazy_static = "1.4.0"
regex = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
